--- a/taskJS/index.html
+++ b/taskJS/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-        <title>Todo.js</title>
+        <title>Tasks</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/app.css">
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -13,13 +13,13 @@
 	
         <main id="app">
             <header>
-                <h1>Todo</h1>
+                <h1>Задачи</h1>
             </header>
 
             <ul id="todo-list">
                 <li class="todo-item">
                     <input class="checkbox" type="checkbox">
-                    <label class="title">Изучить JavaScript</label>
+                    <label class="title">Первая задача</label>
                     <input class="textfield" type="text">
                     <button class="edit">Изменить</button>
                     <button class="delete">Удалить</button>
